--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S5b-Tx-8f9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S5b-Tx-8f9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -5847,18 +5847,118 @@
                                                         <constraint firstAttribute="height" constant="25" id="jBo-25-NJU"/>
                                                     </constraints>
                                                 </imageView>
+                                                <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cqr-Wk-jfb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title=""/>
+                                                </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="Cqr-Wk-jfb" firstAttribute="leading" secondItem="Idg-G8-xtm" secondAttribute="leading" id="8eG-4f-Pof"/>
                                                 <constraint firstItem="ujJ-QI-tq5" firstAttribute="leading" secondItem="B7q-1V-oZm" secondAttribute="trailing" constant="8" id="Meh-e5-EFs"/>
                                                 <constraint firstItem="zZb-Z0-SwO" firstAttribute="leading" secondItem="w12-re-bBh" secondAttribute="trailing" constant="8" id="Uke-V0-PcR"/>
                                                 <constraint firstItem="B7q-1V-oZm" firstAttribute="centerY" secondItem="ujJ-QI-tq5" secondAttribute="centerY" id="Yow-4a-tYE"/>
                                                 <constraint firstItem="w12-re-bBh" firstAttribute="centerY" secondItem="Idg-G8-xtm" secondAttribute="centerY" id="ZWg-S2-LMA"/>
+                                                <constraint firstAttribute="bottom" secondItem="Cqr-Wk-jfb" secondAttribute="bottom" id="Zmv-hg-JEc"/>
+                                                <constraint firstAttribute="trailing" secondItem="Cqr-Wk-jfb" secondAttribute="trailing" id="aVN-7d-Hax"/>
                                                 <constraint firstItem="ujJ-QI-tq5" firstAttribute="centerY" secondItem="Idg-G8-xtm" secondAttribute="centerY" id="c4b-gG-TL1"/>
                                                 <constraint firstItem="zZb-Z0-SwO" firstAttribute="centerY" secondItem="w12-re-bBh" secondAttribute="centerY" id="p8i-qn-sdM"/>
                                                 <constraint firstItem="ujJ-QI-tq5" firstAttribute="trailing" secondItem="Idg-G8-xtm" secondAttribute="trailingMargin" id="pTe-0c-kdS"/>
                                                 <constraint firstItem="w12-re-bBh" firstAttribute="leading" secondItem="Idg-G8-xtm" secondAttribute="leadingMargin" id="tdt-rg-17M"/>
+                                                <constraint firstItem="Cqr-Wk-jfb" firstAttribute="top" secondItem="Idg-G8-xtm" secondAttribute="top" id="uAu-5t-0gZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="photoCell" rowHeight="147" id="HvU-C6-rrm">
+                                        <rect key="frame" x="0.0" y="84.5" width="414" height="147"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HvU-C6-rrm" id="gsR-Qx-OHl">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="147"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4dz-wl-s74">
+                                                    <rect key="frame" x="20" y="11" width="30" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="17f-V2-el9"/>
+                                                        <constraint firstAttribute="height" constant="25" id="6CG-1P-lmr"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WAX-e8-vWQ">
+                                                    <rect key="frame" x="58" y="14.5" width="39" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7C4-CC-EiV">
+                                                    <rect key="frame" x="254" y="11" width="140" height="128"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tcb-0M-EgN">
+                                                            <rect key="frame" x="8" y="10" width="120" height="110"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="110" id="7WY-99-C4V"/>
+                                                                <constraint firstAttribute="width" constant="120" id="zn9-Uy-68u"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xf1-Fg-MSZ">
+                                                            <rect key="frame" x="0.0" y="8" width="132" height="120"/>
+                                                            <state key="normal" title="Button"/>
+                                                            <buttonConfiguration key="configuration" style="plain" title=""/>
+                                                        </button>
+                                                        <view tag="5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mij-Lg-2NY" userLabel="remove button view">
+                                                            <rect key="frame" x="110" y="2" width="30" height="30"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="6" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="multiply" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ZUd-Rn-UcJ">
+                                                                    <rect key="frame" x="4" y="7" width="22" height="15.5"/>
+                                                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                </imageView>
+                                                                <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tEi-ol-EGV">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                                                    <state key="normal" title="Button"/>
+                                                                    <buttonConfiguration key="configuration" style="plain" title=""/>
+                                                                </button>
+                                                            </subviews>
+                                                            <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                            <constraints>
+                                                                <constraint firstItem="tEi-ol-EGV" firstAttribute="leading" secondItem="mij-Lg-2NY" secondAttribute="leading" id="BUf-gB-AqJ"/>
+                                                                <constraint firstAttribute="bottom" secondItem="ZUd-Rn-UcJ" secondAttribute="bottom" constant="4" id="HJO-zr-T1g"/>
+                                                                <constraint firstAttribute="width" constant="30" id="Jrv-1A-0eo"/>
+                                                                <constraint firstItem="tEi-ol-EGV" firstAttribute="top" secondItem="mij-Lg-2NY" secondAttribute="top" id="MNi-0S-Cb7"/>
+                                                                <constraint firstAttribute="trailing" secondItem="ZUd-Rn-UcJ" secondAttribute="trailing" constant="4" id="Pqr-DP-uQZ"/>
+                                                                <constraint firstItem="ZUd-Rn-UcJ" firstAttribute="leading" secondItem="mij-Lg-2NY" secondAttribute="leading" constant="4" id="QyD-cP-KKr"/>
+                                                                <constraint firstAttribute="trailing" secondItem="tEi-ol-EGV" secondAttribute="trailing" id="Xnx-m9-pke"/>
+                                                                <constraint firstAttribute="height" constant="30" id="n8k-NP-kyy"/>
+                                                                <constraint firstAttribute="bottom" secondItem="tEi-ol-EGV" secondAttribute="bottom" id="oCg-QV-FC6"/>
+                                                                <constraint firstItem="ZUd-Rn-UcJ" firstAttribute="top" secondItem="mij-Lg-2NY" secondAttribute="top" constant="4" id="oey-M4-l0S"/>
+                                                            </constraints>
+                                                        </view>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="mij-Lg-2NY" firstAttribute="top" secondItem="7C4-CC-EiV" secondAttribute="top" constant="2" id="0qY-Sp-xAu"/>
+                                                        <constraint firstAttribute="width" constant="140" id="2Hg-Ic-qde"/>
+                                                        <constraint firstItem="Xf1-Fg-MSZ" firstAttribute="leading" secondItem="7C4-CC-EiV" secondAttribute="leading" id="614-mf-GuV"/>
+                                                        <constraint firstAttribute="height" constant="128" id="7fI-T2-VZf"/>
+                                                        <constraint firstAttribute="trailing" secondItem="mij-Lg-2NY" secondAttribute="trailing" id="CjG-mR-it3"/>
+                                                        <constraint firstItem="Tcb-0M-EgN" firstAttribute="leading" secondItem="7C4-CC-EiV" secondAttribute="leading" constant="8" id="F7g-aj-tkk"/>
+                                                        <constraint firstItem="Xf1-Fg-MSZ" firstAttribute="top" secondItem="7C4-CC-EiV" secondAttribute="top" constant="8" id="M8U-Ey-McE"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Xf1-Fg-MSZ" secondAttribute="bottom" id="UoP-iB-0f9"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Xf1-Fg-MSZ" secondAttribute="trailing" constant="8" id="gYA-sI-w0F"/>
+                                                        <constraint firstAttribute="bottom" secondItem="Tcb-0M-EgN" secondAttribute="bottom" constant="8" id="qUa-5c-w6L"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <color key="backgroundColor" name="whiteblack"/>
+                                            <constraints>
+                                                <constraint firstItem="7C4-CC-EiV" firstAttribute="top" secondItem="gsR-Qx-OHl" secondAttribute="topMargin" id="9ci-sN-NTc"/>
+                                                <constraint firstItem="WAX-e8-vWQ" firstAttribute="centerY" secondItem="4dz-wl-s74" secondAttribute="centerY" id="GrR-1f-Hpj"/>
+                                                <constraint firstItem="4dz-wl-s74" firstAttribute="leading" secondItem="gsR-Qx-OHl" secondAttribute="leadingMargin" id="KMP-xP-2Ls"/>
+                                                <constraint firstItem="7C4-CC-EiV" firstAttribute="trailing" secondItem="gsR-Qx-OHl" secondAttribute="trailingMargin" id="bBf-Mx-hvQ"/>
+                                                <constraint firstItem="WAX-e8-vWQ" firstAttribute="leading" secondItem="4dz-wl-s74" secondAttribute="trailing" constant="8" id="pDl-Cj-2WO"/>
+                                                <constraint firstAttribute="bottom" secondItem="7C4-CC-EiV" secondAttribute="bottom" constant="8" id="twE-j6-ebo"/>
+                                                <constraint firstItem="4dz-wl-s74" firstAttribute="top" secondItem="gsR-Qx-OHl" secondAttribute="topMargin" id="xuX-dK-Dnp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" name="whiteblack"/>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
